--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,31 @@
-version: "3"
+version: '3'
 
 services:
-  # Postgres
+
   postgres:
     restart: always
     image: postgres:latest
     ports:
-      - "5432:5432"
+    - 5432
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+    - "/var/lib/postgresql/data/pgdata:/var/lib/postgresql/data"
 
-  # App
   web:
+    environment:
+    - DJANGO_SETTINGS_MODULE=config.settings_pro
+    - SECRET_KEY=912
+    - DATABASE_HOST=postgres
+    - DATABASE_NAME=humo
+    - DATABASE_USER=humo
+    - DATABASE_PASSWORD=912
     restart: always
     env_file:
-      - .env
-    build: .
+    - .env
+    image: $CONTAINER_RELEASE_IMAGE:latest
     links:
-      - postgres:postgres
+    - postgres:postgres
     ports:
-      - "8000:8000"
-    volumes:
-      - ./media:/var/www/gs1_api/media
+    - "8000:8000"
     depends_on:
-      - postgres
+    - postgres
 
-volumes:
-  pgdata:
-  web:
