--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,25 +1,22 @@
 version: "3"
 
 services:
-  # Postgres
   postgres:
     restart: always
     image: postgres:latest
     ports:
     - 5432
 
-  # App
   web:
     build: .
     environment:
     - DJANGO_SETTINGS_MODULE=config.settings_test
     - DATABASE_HOST=postgres
-    - DATABASE_NAME=test
+    - DATABASE_NAME=postgres
     - DATABASE_USER=postgres
     - DATABASE_PASSWORD=
-    image: $CONTAINER_RELEASE_IMAGE:latest
+    image: $CONTAINER_TEST_IMAGE
     links:
     - postgres:postgres
     depends_on:
     - postgres
-
